# omni-bot-rs

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: amqp.rs  db.rs  lib.rs  schemas.rs
src/commands/: mod.rs  video_to_video.rs
