[package]
name = "omni-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive", "env"] }
env_logger = "0.10.1"
futures = "0.3.29"
lapin = "2.3.1"
mongodb = "2.8.0"
poise = "0.5.7"
rand = "0.8.5"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "fs"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
